Fix: z-index added on filter

--- a/src/component/Filter/style.css
+++ b/src/component/Filter/style.css
@@ -9,3 +9,7 @@
 .filter-input:focus {
     border: 1px solid #444CE6;
 }
+
+.filter {
+
+}
